--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,6 @@ rustflags = ["-C", "link-arg=-fuse-ld=lld"]
 actix-web = {version = "4", features = ["openssl",]}
 dotenv = "0.15.0"
 reqwest = "0.12.3"
-serde = "1.0.197"
+serde = {version = "1.0.197", features = ["derive"]}
 tokio = "1.37.0"
 
